--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.5",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "heroku": "^7.22.7",
     "mongoose": "^5.4.22",
+    "morgan": "^1.9.1",
     "node": "^10.15.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.8",
     "react-dom": "^16.8.6",
